# robocomp-viriato

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  humanObserverAgent_GUI.cdsl  socialNavigationAgent.cdsl
components/: CMakeLists.txt
components/HumanSceneSim/: .gitignore  DoxyFile  HumanSceneSim.cdsl  README.md
components/HumanSceneSim/src/: CMakeLists.txt  Planning.h  cmake_install.cmake  (+3 more)
components/SocialNavigationAgent/: CMakeLists.txt  DoxyFile  navigation.cdsl
components/SocialNavigationGUI/: README.md
components/aggtFileCreatorAgent/: CMakeLists.txt  README.md  aggtFileCreatorAgent.cdsl
components/conversationalAgent/: CMakeLists.txt
components/faceDetector/: CMakeLists.txt  README.md  faceDetector.cdsl
components/faceTracking/: CMakeLists.txt  README.md  faceTracking.cdsl
components/fakeHumanAgent/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  Project.cbp  cmake_install.cmake  fakeHumanAgent.cdsl  humansFile.txt  humansFile.txt.save
components/humanAgent/: CMakeLists.txt  DoxyFile  README.md  humanAgent.cdsl
components/humanObserverAgent/: CMakeLists.txt  DoxyFile  README.md  humanObserverAgent.cdsl
components/humanObserverAgent_GUI/: GoogleServiceAcc.md  Makefile
components/humanPose/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  humanPose.cdsl
components/keyboardrobotcontrollerOmni/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  keyboardrobotcontrollerOmni.cdsl
components/localizationAgent/: CMakeLists.txt  DoxyFile  README.md  localizationAgent.cdsl  statemachine.smdsl
components/localizationAgent_RCIS/: localizationAgent.cdsl
components/navigationOptimizer/: CMakeLists.txt  autonomy.json  autonomyLab.xml  laserPoly.txt  navigationOptimizer.cdsl  simpleworldomni.xml  viriato_dwa.json  viriato_dwa_3objects.json
components/newSocialNavigationAgent/: CMakeLists.txt  DoxyFile  README.md  metrics.py  socialNavigationAgent.cdsl
components/roomLocalizationAgent/: CMakeLists.txt  DoxyFile  README.md  roomLocalizationAgent.cdsl
components/socialRulesAgent/: CMakeLists.txt  DoxyFile  README.md  plotCosts.py  socialRulesAgent.cdsl
components/test_reader/: CMakeLists.txt  README.md  test_reader.cdsl
components/test_writer/: CMakeLists.txt  README.md  test_writer.cdsl
components/viratobase/: DoxyFile  viriatobase.cdsl
components/viriatoDSR/: viriatoDSR.cdsl
components/viriatobase/: CMakeLists.txt  DoxyFile  README.md  viriatobase.cdsl
(+636 files in other folders)
