cmake_minimum_required( VERSION 3.0 )
PROJECT( viriato_components )

add_subdirectory( converAgent )
add_subdirectory( conversationalAgent )
add_subdirectory( faceDetector )
add_subdirectory( faceTracking )
add_subdirectory( fakeHumanAgent )
#add_subdirectory( humanAgent )
add_subdirectory( humanObserverAgent )
add_subdirectory( humanObserverAgent_GUI )
#add_subdirectory( humanPose )
#add_subdirectory( humanPoseFake )
add_subdirectory( HumanSceneSim )
add_subdirectory( keyboardrobotcontrollerOmni )
#add_subdirectory( localizationAgent )
add_subdirectory( localizationAgent_RCIS )
#add_subdirectory( newSocialNavigationAgent )
add_subdirectory( roomLocalizationAgent )
add_subdirectory( SocialNavigationAgent )
add_subdirectory( socialnavigationGaussian )
add_subdirectory( SocialNavigationGUI )
add_subdirectory( socialRulesAgent )
add_subdirectory( viriatobase )

